# url-shortner

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  ca.pem  e2e_check.py  pyproject.toml  render.yaml  run_worker_aggregation.py  run_worker_analytics.py  run_worker_cleanup.py  run_worker_expiry.py  run_worker_metadata.py  run_worker_webhook_click.py  run_worker_webhook_retry.py
backend/alembic/: env.py
backend/alembic/versions/: 086a1526c55b_add_short_code_sequence.py  1fc05da58a8c_init_models.py  7b81d53b6f85_add_api_keys_and_is_one_time.py  8f89cb293cba_add_analytics_table.py  93162d97eb99_add_qr_code_to_urls.py  a1b2c3d4e5f6_add_oauth_fields_to_users.py  a4b5c6d7e8f9_make_all_timestamps_timezone_aware.py  a94297fba62e_merge_api_keys_and_webhooks_branches.py  b0c9d8e7f6a5_add_audit_logs.py  b2c3d4e5f6a7_add_avatar_url_to_users.py  b88b76ab784a_audit_logs_timezone_aware.py  c0d1e2f3a4b5_add_dead_letter_table_and_url_metadata.py  c3d4e5f6a7b8_add_enterprise_plan.py  c7d8e9f0a1b2_add_is_superadmin_to_users.py  d1e2f3a4b5c6_add_favorites_table.py  e6f5d4c3b2a1_add_workspace_members_and_invites.py  e73f214a9451_add_webhook_received_events_table.py  f1e2d3c4b5a6_add_webhooks.py  fa956e5f83aa_timezone_aware_audit_created_at.py
backend/schemas/avro/: url-clicked.avsc  url-created.avsc
backend/scratch/: check_locks.py  check_postgres_analytics.py  create_topics.py  test_aggregation_worker.py  test_analytics_pipeline.py  test_cleanup_worker.py  test_connections.py  test_db_register.py  test_expiry_worker.py  test_integration.py  test_phase5.py  test_redirection.py
backend/src/: main.py
backend/src/core/: api_key_auth.py  audit_context.py  config.py  database.py  deps.py  metrics.py  mongodb.py  rbac.py  redis.py  security.py  tracing.py
backend/src/documents/: click_event.py
backend/src/errors/: __init__.py  auth.py  base.py  common.py  url.py  workspace.py
backend/src/events/: dispatcher.py  kafka.py  schemas.py
backend/src/log_utils/: __init__.py  loki_handler.py
backend/src/logging/: __init__.py
backend/src/middleware/: audit.py  metrics.py  rate_limit.py  rbac.py  tracing.py
backend/src/models/: __init__.py  analytics.py  api_key.py  audit_log.py  dead_letter.py  favorite.py  folder.py  tag.py  url.py  user.py  webhook.py  webhook_event.py  webhook_received_event.py  workspace.py  workspace_invite.py  workspace_member.py
backend/src/repositories/: __init__.py  analytics_repository.py  api_key_repository.py  audit_log_repository.py  base.py  favorite_repository.py  folder_repository.py  tag_repository.py  url_repository.py  user_repository.py  webhook_receiver_repository.py  webhook_repository.py  workspace_invite_repository.py  workspace_member_repository.py  workspace_repository.py
backend/src/routes/: admin.py  analytics.py  api_keys.py  audit_logs.py  auth.py  billing.py  bulk.py  favorites.py  folders.py  profile.py  redirect.py  tags.py  urls.py  webhook_receiver.py  webhooks.py  workspaces.py
backend/src/schemas/: api_key.py  audit_log.py  billing.py  favorite.py  folder.py  profile.py  tag.py  url.py  user.py  webhook.py  webhook_receiver.py  workspace.py  workspace_invite.py  workspace_member.py
backend/src/services/: __init__.py  analytics_service.py  api_key_service.py  audit_service.py  auth_service.py  bulk_service.py  email_service.py  event_dispatcher.py  favorite_service.py  folder_service.py  geo_service.py  redirect_service.py  tag_service.py  url_service.py  utm_service.py  webhook_receiver_service.py  webhook_service.py  workspace_service.py
backend/src/utils/: base62.py
backend/src/workers/: _sni_patch.py  aggregation_worker.py  analytics_worker.py  cleanup_worker.py  dlq_replay_worker.py  expiry_worker.py  kafka_consumer_pool.py  metadata_worker.py  qr_worker.py  shutdown.py  webhook_click_consumer.py  webhook_retry_worker.py
backend/tests/: conftest.py  mock_mongodb.py  test_rbac.py  test_repos.py  test_services.py  test_workers.py  testcontainers.py
backend/tests/test_core/: test_errors.py
backend/tests/test_events/: test_avro_schemas.py  test_kafka_producer.py
backend/tests/test_resilience/: conftest.py  test_concurrent.py  test_postgres_down.py  test_redis_down.py
backend/tests/test_routes/: conftest.py  test_admin_routes.py  test_api_key_routes.py  test_auth_routes.py  test_bulk_routes.py  test_folder_tag_favorite_routes.py  test_redirect_routes.py  test_url_routes.py  (+1 more)
(+113 files in other folders)
