[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Treat the top-level `src/` directory as the package root.
# After `uv pip install -e .`, `from src.xxx import yyy` works everywhere.
packages = ["src"]

[project]
name = "backend"
version = "0.1.0"
description = "Enterprise URL Shortener API"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiokafka>=0.14.0",
    "beautifulsoup4>=4.15.0",
    "fastavro>=1.12.2",
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "beanie>=2.1.0,<3",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "hashids>=1.3.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "qrcode[pil]>=8.2",
    "redis>=8.0.1",
    "upstash-redis>=1.7.0",
    "sqlalchemy>=2.0.51",
    "user-agents>=2.2.0",
    "uvicorn>=0.51.0",
    # Observability
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "opentelemetry-exporter-otlp-proto-http>=1.44.0",
    "opentelemetry-instrumentation-fastapi>=0.65b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.65b0",
    "opentelemetry-instrumentation-redis>=0.65b0",
    "python-json-logger>=4.1.0",
]

[project.optional-dependencies]
testcontainers = [
    "testcontainers[postgres,mongodb,redis]>=4.14.2",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.28.1",
    "ruff>=0.15.22",
    "mongomock>=4.3.0",
    "mypy>=2.3.0",
    "types-python-jose>=3.5.0.20260408",
    "types-passlib>=1.7.7.20260211",
    "types-qrcode>=8.2.0.20260518",
    "types-beautifulsoup4>=4.12.0.20250516",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
    "concurrency: marks tests that perform concurrent requests (skipped in push CI, runs nightly)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E712"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = false
strict = false
check_untyped_defs = true
disallow_any_unimported = false
warn_redundant_casts = true
warn_return_any = true

# Modules without stub packages
[[tool.mypy.overrides]]
module = ["hashids", "aiokafka", "aiokafka.*", "user_agents"]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]
"src/core/config.py" = ["N802"]
"src/core/deps.py" = ["E402"]
"src/errors/**" = ["N818"]
"src/workers/_sni_patch.py" = ["I001", "F841"]
"src/workers/webhook_retry_worker.py" = ["F401"]
